--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 header {
-    background-color: beige;
-    color: black;
+    background-color: black;
+    color: aliceblue;
 }
 
 body {
-    background-color: beige;
-    color: black;
+    background-color: black;
+    color: aliceblue;
 }
 
 footer {
-    background-color: beige;
-    color: black;
+    background-color: black;
+    color: aliceblue;
 }
