--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@ footer {
     background-color: black;
     color: aliceblue;
 }
+
+.imagem-2 {
+    width: 40%;
+    align-items: center;
+    margin-left: 200px;
+}
